--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body, input, textarea, select, button {
 
 * {
   	scrollbar-color: #454a4d #202324;
+	text-shadow: 0px 0px 5px rgba(134, 134, 134, 0.431)
 }
 
 .fileUpload + label {
@@ -19,7 +20,7 @@ html, body, input, textarea, select, button {
 }
 
 .btn{
-  	border: 2px solid #736b5e;
+	border: solid 2px black;
   	border-radius: 3px;
   	color: white;
   	transition: 555ms;
@@ -43,13 +44,15 @@ html, body, input, textarea, select, button {
 	text-align: center;
 	color: white;
 	background-color: #181a1b;
+	border: solid 3px black;
 	display: none;
 }
 
 .windowDragHeader {
-	padding: 9px 40%;
+	padding: 8px 34%;
 	cursor: move;
 	background-color: #181a1b;
 	display: inline-block;
+	border: double 3px black;
 	vertical-align: middle;
 }
