--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body, input, textarea, select, button {
 
 * {
   	scrollbar-color: #454a4d #202324;
-	text-shadow: 0px 0px 5px rgba(134, 134, 134, 0.431);
+	text-shadow: 0px 0px 1px rgba(134, 134, 134, 0.431);
 }
 
 .fileUpload + label {
@@ -73,7 +73,14 @@ html, body, input, textarea, select, button {
 	color: rgb(255, 208, 208);
 }
 
+.del:hover {
+	background-color: rgba(255, 208, 208, 0.301);
+	box-shadow: 0px 0px 5px rgb(255, 163, 163);
+}
+
 .removeds {
+	background-color: rgba(255, 163, 163, 0.336);
+	box-shadow: 0px 0px 5px rgba(255, 163, 163, 0.39);
 	animation: 300ms ease-in-out 0ms 1 normal forwards running removed;
 }
 
