--- a/style.css
+++ b/style.css
@@ -73,14 +73,17 @@ html, body, input, textarea, select, button {
 	color: rgb(255, 208, 208);
 }
 
+.del {
+	border-radius: 25%;
+}
+
 .del:hover {
 	background-color: rgba(255, 208, 208, 0.301);
 	box-shadow: 0px 0px 5px rgb(255, 163, 163);
+	border-radius: 35%;
 }
 
 .removeds {
-	background-color: rgba(255, 163, 163, 0.336);
-	box-shadow: 0px 0px 5px rgba(255, 163, 163, 0.39);
 	animation: 300ms ease-in-out 0ms 1 normal forwards running removed;
 }
 
@@ -92,7 +95,9 @@ html, body, input, textarea, select, button {
 	40% {
 		transform: scale(1.1);
 	}
-	80 % {
+	80% {
+		background-color: rgba(255, 163, 163, 0.336);
+		box-shadow: 0px 0px 5px rgba(255, 163, 163, 0.39);
 	}
 	to {
 		opacity: 0%;
